@@ -33,5 +33,6 @@
  - Added image and download options to the set command.
  - Added the "minutes" property to playlists.
  - Added a way to refresh length of certain tracks (CLI).
+ - Added an API method to find tracks by tag.
  - Removed old commands: hotline, icelog, listeners, mail (CLI).
  - Changed tags order in tags/show: subtags go last.
